==> w809291634/RTT-WIFI-PROJECT/rtthread/zonesion/xLab/WiFi/sensor-node/src/sensor/sensor-b/beep.c <==
/*********************************************************************************************
* 文件：FAN.c
* 作者：
* 说明：
* 修改：
* 注释：
*********************************************************************************************/
/*********************************************************************************************
* 头文件
*********************************************************************************************/
#include "beep.h"
#include "stm32f10x.h"
/*********************************************************************************************
* 名称：led_init()
* 功能：LED控制引脚初始化
* 参数：无
* 返回：无
* 修改：
* 注释：
*********************************************************************************************/
void Beep_init(void)
{
  GPIO_InitTypeDef  GPIO_InitStructure;
 	
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);	 //使能PA端口时钟
  GPIO_InitStructure.GPIO_Pin = BEEP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(BEEP_port, &GPIO_InitStructure);	
  
  Beep_off(0x01);
}
  
/*********************************************************************************************
* 名称：FAN_on()
* 功能：风扇控制打开函数
* 参数：
* 返回：0，打开LED成功，-1，参数错误
* 修改：
* 注释：
*********************************************************************************************/
signed char Beep_on(unsigned char fan)
{
  if(fan & 0x01){                                                //如果要打开风扇
    GPIO_ResetBits(BEEP_port,BEEP);
    return 0;
  }
  
  return -1;                                                    //参数错误，返回-1
}

/*********************************************************************************************
* 名称：FAN_off()
* 功能：
* 参数：
* 返回：0，关闭成功，-1，参数错误
* 修改：
* 注释：
*********************************************************************************************/
signed char Beep_off(unsigned char fan)
{
  if(fan &0x01){                                                //如果要关闭风扇
    GPIO_SetBits(BEEP_port, BEEP);
    return 0;
  }

  return -1;                                                    //参数错误，返回-1
}
